# verd

./: .env.example  .gitignore  .verd.yaml.example  README.md  pyproject.toml
api/: main.py
benchmark/: run_martian_benchmark.py  run_value_benchmark.py
tests/: test_cli.py  test_confidence.py  test_engine.py  test_integration.py  test_judge.py  test_models.py  test_question_detection.py  test_security.py  test_selector.py  test_user_config.py
verd/: __main__.py  config.py  context.py  engine.py  judge.py  log.py  mcp_server.py  models.py  output.py  security.py  selector.py  slack_bot.py  templates.py  user_config.py  version_check.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: company-context.tsx  debate-form.tsx  live-debate.tsx  template-picker.tsx  verdict-card.tsx
web/src/lib/: api.ts
